force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/clofor_com_cfs__PurchasingInvoice__c.object-meta.xml
<CustomObject>
    <label>購買注文明細</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>PURCHASING INVOICE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>