force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__AmountIPInclTaxText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountIPInclTaxText__c</fullName>
    <label>AMOUNT P/I INCL TAX(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>