force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__AmountOfTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfTax__c</fullName>
    <formula>clofor_com_cfs__TotalAmount__c  *  clofor_com_cfs__TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-PURCHASING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>