force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__AmountOfTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfTaxLocal__c</fullName>
    <formula>clofor_com_cfs__TotalAmountLocal__c *   clofor_com_cfs__TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>