force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__BankAccountPurchasing__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountPurchasing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-PURCHASING</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipName>PURCHASING_INVOICE</relationshipName>
    <type>Lookup</type>
</CustomField>