force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChargeUnit__c</fullName>
    <defaultValue>1</defaultValue>
    <label>CHARGE UNIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>