force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRate__c</fullName>
    <label>EXCHANGE RATE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>