force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InvoiceId__c</fullName>
    <label>PURCHASING INVOICE NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>