force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidAmount__c</fullName>
    <label>AMOUNT PAID-PURCHASING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>