force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__PaidAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidAmountLocal__c</fullName>
    <label>AMOUNT PAID-PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>