force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentType__c</fullName>
    <label>PAYMENT TYPE-PURCHASING</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BANK TRANSFER</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>OFFSET</fullName>
            </value>
            <value>
                <fullName>Deposit Offset</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>