force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__PurchasingBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>PURCHASING BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>