force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__PurchasingCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PURCHASING CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>PURCHASING_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>