force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__PurchasingOrder__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingOrder__c</fullName>
    <label>PURCHASING ORDER</label>
    <referenceTo>clofor_com_cfs__PurchasingOrder__c</referenceTo>
    <relationshipName>PURCHASING_INVOICE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>