force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__PurchasingVATCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingVATCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P/I VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>PurchasingVATCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>