force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__RAMID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RAMID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RAM ID</label>
    <referenceTo>clofor_com_cfs__MAINTENANCE_REPAIR__c</referenceTo>
    <relationshipLabel>PUR INV</relationshipLabel>
    <relationshipName>ExPurInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>