force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__RepairMaintenanceCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RepairMaintenanceCategory__c</fullName>
    <formula>text(clofor_com_cfs__ResourceID__r.clofor_com_cfs__RepairMaintenanceCategory__c)</formula>
    <label>REPAIR &amp; MAINTENANCE CATEGORY</label>
    <type>Text</type>
</CustomField>