force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__ResourceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RESOURCE ID</label>
    <referenceTo>clofor_com_cfs__resource__c</referenceTo>
    <relationshipName>PURCHASING_INVOICE</relationshipName>
    <type>Lookup</type>
</CustomField>