force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__ResourceSubCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ResourceSubCategory__c</fullName>
    <formula>text(clofor_com_cfs__ResourceID__r.clofor_com_cfs__SubCategory__c)</formula>
    <label>RESOURCE SUBCATEGORY</label>
    <type>Text</type>
</CustomField>