force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__Tax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tax__c</fullName>
    <formula>TEXT(clofor_com_cfs__ResourceID__r.clofor_com_cfs__Tax__c)</formula>
    <label>TAX</label>
    <type>Text</type>
</CustomField>