force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__TRBClaim__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TRBClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRB/CLAIM</label>
    <referenceTo>clofor_com_cfs__Claim__c</referenceTo>
    <relationshipLabel>PROC ORDER LINE</relationshipLabel>
    <relationshipName>ProcOrderLine</relationshipName>
    <type>Lookup</type>
</CustomField>