force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__UnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnitPriceLocal__c</fullName>
    <label>UNIT PRICE OF PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>