force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__UnpaidBalance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalance__c</fullName>
    <formula>clofor_com_cfs__AmountIncludedTax__c  -  clofor_com_cfs__PaidAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF PURCHASING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>