force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/fields/clofor_com_cfs__UnpaidbalanceOfPurchasingLocalText__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidbalanceOfPurchasingLocalText__c</fullName>
    <label>UNPAID BALANCE OF PURCHASING(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>