force-app/main/default/objects/clofor_com_cfs__PurchasingInvoice__c/listViews/clofor_com_cfs__Payable_Process.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__Payable_Process</fullName>
    <columns>clofor_com_cfs__InvoiceId__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__PurchasingOrder__c</columns>
    <columns>clofor_com_cfs__AmountIncludedTaxLocal__c</columns>
    <columns>clofor_com_cfs__AmountIncludedTax__c</columns>
    <columns>clofor_com_cfs__PaidAmountLocal__c</columns>
    <columns>clofor_com_cfs__PaidAmount__c</columns>
    <columns>clofor_com_cfs__UnpaidBalanceLocal__c</columns>
    <columns>clofor_com_cfs__UnpaidBalance__c</columns>
    <columns>clofor_com_cfs__PaymentConfirmed__c</columns>
    <columns>clofor_com_cfs__Beneficiary__c</columns>
    <columns>clofor_com_cfs__PaymentSettledDate__c</columns>
    <columns>clofor_com_cfs__PaymentToVendor__c</columns>
    <columns>clofor_com_cfs__BankAccountPurchasing__c</columns>
    <columns>clofor_com_cfs__PaymentType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__AmountIncludedTaxLocal__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>clofor_com_cfs__UnpaidBalanceLocal__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>clofor_com_cfs__PurchasingOrder__c</field>
        <operation>equals</operation>
        <value>PO-000011</value>
    </filters>
    <label>Payable Process-Standard(ID)</label>
    <language>en_US</language>
</ListView>